# clip-model-research

./: .gitignore  README.md  bench_embedder.py  compare.py  compare_input_pixels.py  export_onnx.py  main.py  pyproject.toml  simple.py  simple_onnx.py
fashion/: fashion_original.py  fasion_reference.py  original.py
mobileclip/: general_export_onnx.py  mobileclip.py  mobileclip_debug.py  mobileclip_search.py
mobileclip/assets/: .gitignore
openai/: clip_vit.py  export_onnx_vit.py  run_onnx.py  run_onnx_no_hf.py
openai/assets/: .gitignore
qwen-llamacpp/: README.md  models.ini  run-server.ps1  test-llama-server.py
qwen-llamacpp/models/: PUT_QWEN_MODELS_HERE
sl1/: export_onnx.py  simple.py  simple_onnx.py
sl2/: export_onnx_sl2.py  reference.py  reference_sl2.py  run_onnx_sl2.py  simple_sl2.py
